--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -52,6 +52,13 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 body::before {
     content: "";
     position: fixed;
@@ -2398,10 +2405,7 @@ canvas {
     transform: none;
 }
 
-.damn-card--wallet {
-    padding: 15px !important;
 
-}
 
 .damn-card--wallet .wallet-withdraw {
     margin-top: 16px;
@@ -3113,22 +3117,23 @@ body.is-touch #leaderboard {
 .damn-hero__brand {
     display: inline-flex;
     align-items: baseline;
-    gap: clamp(6px, 1.6vw, 16px);
     justify-content: center;
 }
 
 .damn-hero__brand-main {
-    font-family: var(--font-display);
-    font-size: clamp(48px, 8vw, 78px);
+    font-size: 50px;
     font-weight: 700;
     color: var(--color-accent);
+    font-style: italic;
+    font-family: "Boldonse", system-ui !important;
     text-shadow: 0 20px 36px rgba(0, 0, 0, 0.65), 0 0 48px var(--color-accent-glow);
 }
 
 .damn-hero__brand-accent {
-    font-family: var(--font-display);
-    font-size: clamp(48px, 8vw, 78px);
+    font-family: "Boldonse", system-ui !important;
+    font-size: 50px;
     font-weight: 600;
+    font-style: italic;
     color: #ffffff;
     text-shadow: 0 18px 32px rgba(0, 0, 0, 0.6);
 }
@@ -3207,7 +3212,7 @@ body.is-touch #leaderboard {
 
 .damn-card {
     position: relative;
-    padding: clamp(22px, 3.2vw, 32px);
+    padding: 15px !important;
     background: #000;
     border: 1px solid var(--color-border);
     overflow: hidden;
@@ -3224,12 +3229,23 @@ body.is-touch #leaderboard {
     margin-bottom: clamp(16px, 2.4vw, 22px);
     position: relative;
     z-index: 1;
+    align-items: center;
+}
+
+.damn-card__header > div:first-child {
+    display: flex;
+    gap: 8px;
+    align-items: center;
+}
+
+.damn-card__header > div:first-child > img{
+    height: 18px;
 }
 
 .damn-card__title {
     margin: 0;
-    font-size: clamp(18px, 2.4vw, 22px);
     font-weight: 700;
+    font-size: 16px;
     /*text-transform: uppercase;*/
 }
 
@@ -3331,6 +3347,44 @@ body.is-touch #leaderboard {
     font-size: 12px;
     color: var(--color-text-soft);
 }
+
+.leaderboard__live{
+    display: flex;
+    gap: 5px;
+    border: 1px solid #49DE80;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 10px;
+    border-radius: 50px;
+}
+
+.leaderboard__live-text{
+    color: #49DE80;
+    font-size: 12px;
+}
+
+.leaderboard__live-rounded{
+
+    border-radius: 50%;
+    background-color: #49DE80;
+    width: 8px;
+    height: 8px;
+    box-shadow: 0 0 0 0 rgba(73, 222, 128, 0.6);
+    animation: pulseShadow 1.5s infinite ease-in-out;
+}
+
+@keyframes pulseShadow {
+    0% {
+        box-shadow: 0 0 0 0 rgba(73, 222, 128, 0.6);
+    }
+    70% {
+        box-shadow: 0 0 0 5px rgba(73, 222, 128, 0);
+    }
+    100% {
+        box-shadow: 0 0 0 0 rgba(73, 222, 128, 0);
+    }
+}
+
 
 .damn-card__hint {
     margin-top: 18px;
@@ -3592,9 +3646,10 @@ body.is-touch #leaderboard {
 
 .damn-wallet__balance {
     display: flex;
-    justify-content: space-between;
     align-items: baseline;
-    gap: 12px;
+    flex-direction: column;
+    align-items: center;
+    gap: 2px;
 }
 
 .damn-wallet__label {
@@ -3632,6 +3687,8 @@ body.is-touch #leaderboard {
 
 .damn-wallet__meta-value {
     font-weight: 600;
+    font-size: 12px;
+    opacity: .7;
     color: var(--color-text-primary);
 }
 
